Mais melhorias nos dtos